--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,12 @@
 # ---------- Build stage ----------
-FROM golang:1.22-alpine AS builder
+FROM golang:alpine AS builder
 WORKDIR /app
 
-RUN apk add --no-cache git ca-certificates
-COPY go.mod go.sum ./
-RUN go mod download
+RUN apk add --no-cache ca-certificates
 
 COPY . .
 ENV CGO_ENABLED=0 GOOS=linux GOARCH=amd64
-RUN go build -ldflags="-s -w" -o /app/bin/server ./cmd/server/main.go
+RUN go build -mod=vendor -ldflags="-s -w" -o /app/bin/server ./cmd/server/main.go
 
 # ---------- Runtime stage ----------
 FROM gcr.io/distroless/static-debian12
